# rapid-api-client

./: .gitignore  Justfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  poetry.yml
examples/async/: httpbin.py
examples/coingecko/: crypto.py
examples/github/: list_issues.py
examples/github_issues/: github_issues.py  list_issues.py
examples/httpbin/: httpbin.py
examples/nasa/: apod.py
examples/openweathermap/: weather.py
examples/pokeapi/: pokemon.py
rapid_api_client/: __init__.py  annotations.py  client.py  decorator.py  model.py  parameters.py  response.py  serializer.py  typing.py  utils.py
rapid_api_client/aio/: client2.py  decorator2.py
rapid_api_client/async_/: __init__.py  client.py  decorator.py
rapid_api_client/sync/: __init__.py  decorator.py
src/rapid_api_client/: __init__.py  annotations.py  client.py  decorator.py  errors.py  parameters.py  response.py  utils.py  xml.py
tests/: conftest.py  test_async.py  test_autocomplete.py  test_body.py  test_client_factory.py  test_errors.py  test_headers.py  test_http.py  test_path.py  test_query.py  test_rapid_decorator.py  test_response.py  test_sync.py  test_validation.py  test_xml.py
