[project]
name = "rapid-api-client"

[tool.poetry]
name = "rapid-api-client"
version = "0.8.1"
description = "Rapidly develop your API clients using decorators and annotations"
authors = ["Sébastien MB <seb@essembeh.org>"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/essembeh/rapid-api-client"
Repository = "https://github.com/essembeh/rapid-api-client"
Issues = "https://github.com/essembeh/rapid-api-client/issues"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.*"
httpx = "0.*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
pytest-cov = "*"
pytest-dotenv = {extras = ["cli"], version = "*"}
pydantic-xml = "*"
mypy = "*"
pylint = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
