[project]
name = "rapid-api-client"
version = "0.9.0"
description = "Rapidly develop your API clients using decorators and annotations"
readme = "README.md"
authors = [
    { name = "Sébastien MB", email = "seb@essembeh.org" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: AsyncIO",
    "Framework :: Pydantic",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
    "pydantic>=2.10,<3.0",
]

[project.urls]
Homepage = "https://github.com/essembeh/rapid-api-client"
Repository = "https://github.com/essembeh/rapid-api-client"
Issues = "https://github.com/essembeh/rapid-api-client/issues"

[build-system]
requires = ["uv_build>=0.7.22,<0.8"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pydantic-xml>=2.18.0",
    "pylint>=4.0.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
